优化authority接口
