# server/global/model.go
@@ -6,8 +6,8 @@ import (
 )
 
 type TD27_MODEL struct {
-	ID        uint           `gorm:"primarykey"` // 主键ID
-	CreatedAt time.Time      // 创建时间
-	UpdatedAt time.Time      // 更新时间
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"` // 删除时间
+	ID        uint           `json:"id" gorm:"primarykey"` // 主键ID
+	CreatedAt time.Time      `json:"createdAt"`            // 创建时间
+	UpdatedAt time.Time      `json:"updatedAt"`            // 更新时间
+	DeletedAt gorm.DeletedAt `json:"-" gorm:"index"`       // 删除时间
 }
