# server/model/authority/menu.go
@@ -3,24 +3,20 @@ package authority
 import (
 	"database/sql/driver"
 	"encoding/json"
-	"gorm.io/gorm"
-	"time"
+	"server/global"
 )
 
 type MenuModel struct {
-	ID        uint           `json:"id" gorm:"primarykey"`      // 主键ID
-	CreatedAt time.Time      `json:"-"`                         // 创建时间
-	UpdatedAt time.Time      `json:"-"`                         // 更新时间
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`            // 删除时间
-	Pid       uint           `json:"pid"`                       // 父菜单ID
-	Name      string         `json:"name,omitempty"`            // 路由名称
-	Path      string         `json:"path" gorm:"unique"`        // 路由路径
-	Redirect  string         `json:"redirect,omitempty"`        // 重定向
-	Component string         `json:"component" gorm:"not null"` // 前端组件
-	Sort      uint           `json:"sort" gorm:"not null"`      // 排序
-	Meta      Meta           `json:"meta" gorm:"type:json"`     // 元数据
-	Children  []MenuModel    `json:"children,omitempty" gorm:"-"`
-	Roles     []*RoleModel   `json:"-" gorm:"many2many:role_menus;"`
+	global.TD27_MODEL
+	Pid       uint         `json:"pid"`                       // 父菜单ID
+	Name      string       `json:"name,omitempty"`            // 路由名称
+	Path      string       `json:"path" gorm:"unique"`        // 路由路径
+	Redirect  string       `json:"redirect,omitempty"`        // 重定向
+	Component string       `json:"component" gorm:"not null"` // 前端组件
+	Sort      uint         `json:"sort" gorm:"not null"`      // 排序
+	Meta      Meta         `json:"meta" gorm:"type:json"`     // 元数据
+	Children  []MenuModel  `json:"children,omitempty" gorm:"-"`
+	Roles     []*RoleModel `json:"-" gorm:"many2many:role_menus;"`
 }
 
 type Meta struct {
